@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* replace AbstractListField.getElementValueClass() by getElement()
+	this breaks backwards API compatibility, but is likely to affect a generic backoffice only
 * LimitedListField throws ListSizeViolationException instead of IllegalArgumentException
 * add AbstractListField.getMaximumSize()
 * replace SchemaInfo.getColumnValue(EnumField, Enum) by getColumnValue(Enum)
